bug with autocomplete fixed, added error to account reducer

--- a/StudentMaster.Client/src/app/routes/profile/overview/password/password.component.html
+++ b/StudentMaster.Client/src/app/routes/profile/overview/password/password.component.html
@@ -6,7 +6,7 @@
         <form [formGroup]="currentPassword">
           <ng-template matStepLabel>Current password</ng-template>
           <mat-form-field class="cell-md-5 cell-12">
-            <input type="password" class="cell-md-6 cell-12" matInput placeholder="Current password"
+            <input name="email" autocomplete="on" type="password" class="cell-md-6 cell-12" matInput placeholder="Current password"
               formControlName="password" required>
           </mat-form-field>
           <div>
@@ -19,11 +19,11 @@
         <form [formGroup]="newPasswrod">
           <ng-template matStepLabel>New Password</ng-template>
           <mat-form-field class="cell-md-6 cell-12">
-            <input type="password" matInput placeholder="New Password" formControlName="password" required>
+            <input name="email" autocomplete="off" type="password" matInput placeholder="New Password" formControlName="password" required>
           </mat-form-field>
           <br>
           <mat-form-field class="cell-md-6 cell-12">
-            <input type="password" matInput placeholder="Confirm Password" formControlName="confirm" required>
+            <input name="email" autocomplete="off" type="password" matInput placeholder="Confirm Password" formControlName="confirm" required>
           </mat-form-field>
           <div>
             <button mat-raised-button color="accent" style="margin-right: 1rem;" matStepperPrevious>Back</button>
