--- a/StudentMaster.Client/src/app/routes/teacher/components/add-mark/add-mark.component.html
+++ b/StudentMaster.Client/src/app/routes/teacher/components/add-mark/add-mark.component.html
@@ -28,12 +28,11 @@
 
         <div>
           <!-- <mat-progress-bar *ngIf="this.isLoading" mode="indeterminate" class="cell-3"></mat-progress-bar> -->
-          <mat-spinner *ngIf="this.isLoading"></mat-spinner>
           <button
-            *ngIf="!this.isLoading"
-            mat-raised-button
+            mat-raised-buttonccc
             color="primary"
-            [disabled]="this.subjectForm.invalid"
+            [disabled]=" this.isLoading"
+            [class.spinner]="this.isLoading"
             (click)="onSubmitSubjectForm(stepper)"
           >
             Next
