--- a/StudentMaster.Client/src/app/routes/teacher/components/dashboard/dashboard.component.html
+++ b/StudentMaster.Client/src/app/routes/teacher/components/dashboard/dashboard.component.html
@@ -1,38 +1,39 @@
-<div class="row">
-  <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.addHomeWork()"
-    class="cell-md-3 cell-12">Add homework</button>
-</div>
-<div class="example-container mat-elevation-z8">
+<mat-tab-group (selectedIndexChange)="onChange($event)" mat-align-tabs="center" animationDuration="2000ms">
+  <mat-tab *ngFor="let item of this.classes" label="{{item.name}}">
+    <div class="container-fluid">
+      <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.addHomeWork()"
+      class="cell-md-3 cell-12">Add homework</button>
+      <br>
+      <table mat-table [dataSource]="dataSource">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="PIB">
+          <th mat-header-cell *matHeaderCellDef> PIB </th>
+          <td mat-cell *matCellDef="let element"> {{element.pib}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Marks">
+          <th mat-header-cell *matHeaderCellDef> Marks </th>
+          <td mat-cell *matCellDef="let element">
+            <button style="margin: 1rem;" (click)="this.openDialog(element.id)" mat-stroked-button color="accent">Add a
+              mark</button>
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="ControlMark">
+          <th mat-header-cell *matHeaderCellDef> Control Work </th>
+          <td mat-cell *matCellDef="let element">
+          </td>
+        </ng-container>
 
 
-  <table mat-table [dataSource]="dataSource">
-
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="PIB">
-      <th mat-header-cell *matHeaderCellDef> PIB </th>
-      <td mat-cell *matCellDef="let element"> {{element.pib}} </td>
-    </ng-container>
-    <ng-container matColumnDef="Marks">
-      <th mat-header-cell *matHeaderCellDef> Marks </th>
-      <td mat-cell *matCellDef="let element">
-        <button style="margin: 1rem;" (click)="this.openDialog(element.id)" mat-stroked-button color="accent">Add a
-          mark</button>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="ControlMark">
-      <th mat-header-cell *matHeaderCellDef> Control Work </th>
-      <td mat-cell *matCellDef="let element">
-      </td>
-    </ng-container>
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+  </mat-tab>
+</mat-tab-group>
