--- a/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
+++ b/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
@@ -3,6 +3,8 @@
     <div class="container-fluid">
       <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.inviteStudent()"
       class="cell-md-3 cell-12">Invite a student</button>
+      <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.editSubjects()"
+      class="cell-md-3 cell-12">Edit subjects</button>
       <br>
       <table mat-table [dataSource]="dataSource">
 
