work, bug fixed

--- a/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
+++ b/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
@@ -5,6 +5,8 @@
       class="cell-md-3 cell-12">Invite a student</button>
       <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.editSubjects()"
       class="cell-md-3 cell-12">Edit subjects</button>
+      <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.editTeachers()"
+      class="cell-md-3 cell-12">Edit teachers</button>
       <br>
       <table mat-table [dataSource]="dataSource">
 
