work, bug fixed

--- a/StudentMaster.Client/src/app/routes/dashboard/components/classmates/classmates.component.html
+++ b/StudentMaster.Client/src/app/routes/dashboard/components/classmates/classmates.component.html
@@ -1,6 +1,6 @@
 
 
-<mat-card  class="cell-md-3 cell-12">
+<mat-card  class=" cell-12">
     <mat-list *ngIf="this.isSuccess">
       <h3 mat-subheader>Classmates</h3>
       <mat-list-item *ngFor="let student of students">
@@ -9,8 +9,6 @@
       </mat-list-item>
     </mat-list>
     <app-loading-failed *ngIf="this.isFailed"></app-loading-failed>
-    <p *ngIf="this.isFailed" cell="cell-12 text-center" style="text-align: center;">
-      <app-loading class="text-center " style="text-align:center"></app-loading>
-    </p>
+    <app-loading *ngIf="this.isLoading" class="text-center " style="text-align:center"></app-loading>
 
 </mat-card>
