--- a/StudentMaster.Client/src/app/routes/dashboard/dashboard.component.html
+++ b/StudentMaster.Client/src/app/routes/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
 <breadcrumb></breadcrumb>
 <app-marks-chart></app-marks-chart>
-<app-classmates></app-classmates>
+<div class="row">
+  <app-classmates class="cell-md-5 cell-12" ></app-classmates>
+  <app-avarage-marks class="cell-md-5 cell-12"></app-avarage-marks>
+</div>
+
