--- a/StudentMaster.Client/src/app/routes/dashboard/components/marks-chart/marks-chart.component.html
+++ b/StudentMaster.Client/src/app/routes/dashboard/components/marks-chart/marks-chart.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>PROGRESS</mat-card-subtitle>
     <mat-card-content>
       <div id="chart1">
-        <h3 *ngIf="this.data == null && this.data === undefined">Empty</h3>
+        <h3 *ngIf="this.data == null && this.data === undefined">  <app-loading *ngIf="this.data == null && this.data === undefined" class="text-center " style="text-align:center"></app-loading></h3>
       </div>
     </mat-card-content>
   </mat-card>
