--- a/StudentMaster.Client/src/app/routes/chat/components/chat/chat.component.scss
+++ b/StudentMaster.Client/src/app/routes/chat/components/chat/chat.component.scss
@@ -19,3 +19,7 @@ mat-list-option[aria-selected="true"] {
 
   overflow-wrap: inherit;
 }
+.mat-pseudo-checkbox {
+  display: none !important;
+  visibility: hidden !important;
+}
