--- a/StudentMaster.Client/src/app/routes/homeworks/components/homeworks/homeworks.component.html
+++ b/StudentMaster.Client/src/app/routes/homeworks/components/homeworks/homeworks.component.html
@@ -14,7 +14,7 @@
         download="download"
         >Download</a
       >
-      <button class="cell-11" style="margin: 1rem;" mat-raised-button color="accent">Upload</button>
+      <!-- <button class="cell-11" style="margin: 1rem;" mat-raised-button color="accent">Upload</button> -->
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-footer style="text-align: center">
