--- a/StudentMaster.Client/src/app/routes/news/components/news/show-new/show-new.component.html
+++ b/StudentMaster.Client/src/app/routes/news/components/news/show-new/show-new.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>{{data.name}}</h1>
 <div mat-dialog-content>
-  <p style="margin-left: 1rem">{{data.message}}</p>
+  <p style="margin-left: 1rem; font-size: 18px">{{data.message}}</p>
 </div>
 <mat-divider></mat-divider>
 <div mat-dialog-actions>
