--- a/StudentMaster.Client/src/app/routes/homeworks/components/homeworks/homeworks.component.html
+++ b/StudentMaster.Client/src/app/routes/homeworks/components/homeworks/homeworks.component.html
@@ -1,4 +1,10 @@
+<mat-tab-group (selectedIndexChange)="onChange($event)" mat-align-tabs="center" animationDuration="2000ms">
+  <mat-tab *ngFor="let item of this.types" label="{{item}}">
+  </mat-tab>
+</mat-tab-group>
+<h1 *ngIf="this.homeworks.length === 0" class="cell-12" style="text-align: center;">No homeworks yet.</h1>
 <div class="row">
+
   <mat-card class="cell-11 cell-md-3" style="margin: 1rem;" *ngFor="let item of this.homeworks">
     <mat-card-title>{{ item.subject }}</mat-card-title>
     <mat-card-subtitle>{{ item.theme }}</mat-card-subtitle>
@@ -14,7 +20,10 @@
         download="download"
         >Download</a
       >
-      <!-- <button class="cell-11" style="margin: 1rem;" mat-raised-button color="accent">Upload</button> -->
+      <input id="fileSelector" type="file" style="display: none;" />
+     <button class="cell-11" *ngIf="this.item.status === types[0]" style="margin: 1rem;" (click)="upload(item.id)" mat-raised-button color="accent">Upload</button>
+     <button class="cell-11" *ngIf="this.item.status === types[1]" style="margin: 1rem;" (click)="remove(item.id)" mat-raised-button color="warn">Remove</button>
+     <h2 class="cell-12" style="text-align: center " *ngIf="this.item.status === types[2]">Mark: {{item.mark}}</h2>
     </mat-card-content>
     <mat-divider></mat-divider>
     <mat-card-footer style="text-align: center">
