--- a/StudentMaster.Client/src/app/routes/teacher/components/homeworks/homeworks.component.html
+++ b/StudentMaster.Client/src/app/routes/teacher/components/homeworks/homeworks.component.html
@@ -1,3 +1,4 @@
+<h1 *ngIf="this.homeworks.length === 0" class="cell-12" style="text-align: center;">No homeworks yet.</h1>
 <mat-card  *ngFor="let el of this.homeworks">
   <mat-list role="list">
     <mat-list-item role="listitem"><p class="cell-3">PIB:</p> {{el.pib}} </mat-list-item>
