--- a/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
+++ b/StudentMaster.Client/src/app/routes/admin/components/classes/classes.component.html
@@ -9,6 +9,7 @@
       <button mat-stroked-button color="accent" style="margin:1rem;" (click)="this.editTeachers()"
       class="cell-md-3 cell-12">Edit teachers</button>
       <br>
+      <app-group-chat [class] = "item.id"></app-group-chat>
       <table mat-table [dataSource]="dataSource">
 
         <!-- Position Column -->
