--- a/StudentMaster.Client/src/app/routes/dashboard/dashboard.component.html
+++ b/StudentMaster.Client/src/app/routes/dashboard/dashboard.component.html
@@ -4,4 +4,4 @@
   <app-classmates class="cell-md-5 cell-12" ></app-classmates>
   <app-avarage-marks class="cell-md-5 cell-12"></app-avarage-marks>
 </div>
-
+<app-group-chat [class] = "-1"></app-group-chat>
